# sikakumaru

./: .clinerules  .cursorrules  .gitignore  .roomodes  ax_gemini_deno_example.ts  code-review-summary.md  comprehensive-exam-generator-prompt.md  deno.json  design-plan.md  flowchart.md  implementation-plan.md  langchain-types-summary.md  langchain_advanced_gemini_deno_example.ts  langchain_gemini_deno_example.ts  langchainjs-advanced-features-deno-gemini.md  main.ts  next-steps.md  pyproject.toml  tech-stack.md
docs/: project_status.md
logs/: roo-activity-2025-03-30.json
logs/activity/: roo-activity-2025-03-30.json
logs/architect/: roo-activity-2025-03-30.json  roo-activity-2025-03-31.json
logs/ask/: roo-activity-2025-03-30.json  roo-activity-2025-03-31.json  roo-activity-2025-04-01.json
logs/boomerang/: roo-activity-2025-03-31.json  roo-activity-2025-04-01.json
logs/code/: roo-activity-2025-03-30.json  roo-activity-2025-03-31.json  roo-activity-2025-04-01.json
sikakumaru/app/core/: README.md  architecture.md  demo.py  llm_question_generator.py  psychometric_evaluation_engine.py  question_generation_engine.py  requirements.txt
sikakumaru/app/domain/: __init__.py  models.py
sikakumaru/app/infrastructure/: README.md  __init__.py  env_manager.py
sikakumaru/app/llm/: llm_client.py  (+1 more)
src/: cli.test.ts  cli.ts  cli.unit.test.ts  llm.integration.test.ts  llm.test.ts  llm.ts  llm.unit.test.ts  prompt.test.ts  prompt.ts  prompt.unit.test.ts  types.ts
src/__snapshots__/: prompt.test.ts.snap  prompt.unit.test.ts.snap
templates/: exam-prompt.eta
(+6 files in other folders)
