[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sikakumaru"
version = "0.1.0"
description = "資格試験対策のための自動問題生成システム"
requires-python = ">=3.11"
authors = [{ name = "しかくまるチーム" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.0.267",
    "langchain-openai>=0.0.1",
    "openai>=1.0.0",
    "diskcache>=5.6.1",
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
    "python-jose>=3.3.0",
    "redis>=5.0.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.284",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
